fix(mobile) MoreMenu - layout issue
Issue: OAPWAF-1565
test: 153-more-menu

--- a/tau/src/css/profile/mobile/changeable/common/coloredlist.less
+++ b/tau/src/css/profile/mobile/changeable/common/coloredlist.less
@@ -6,11 +6,15 @@
 	&.ui-colored-list {
 		position: relative;
 		.transform(translate3d(0, 0, 0));
-		.ui-li.ui-li-anchor, .ui-li.ui-btn, .ui-li-static {
+		.ui-li-anchor, .ui-li.ui-btn, .ui-li-static {
 			background-color: transparent;
-			border-bottom: 0;
+			border-color: transparent;
+			a {
+				padding-top: 34 * @unit_base;
+				padding-bottom: 32 * @unit_base;
+			}
 		}
-		.ui-li.ui-li-anchor:active, .ui-li.ui-btn:active, .ui-li-static:active {
+		.ui-li-anchor:active, .ui-li.ui-btn:active, .ui-li-static:active {
 			background-color: @color_list_press;
 		}
 	}
